# heroes

./: .gitignore  Cargo.toml  Procfile  RustConfig
migrations/2021-02-06-083236_heroes/: up.sql
src/: heroes.rs  main.rs  models.rs  schema.rs
templates/: list.html.hbs  new.html.hbs  update.html.hbs
